<resources>
    <!--        General values  -->
    <string name="app_name">DictaCloud</string>
    <string name="not_implemented_media">This media is not yet implemented</string>
    <string name="not_implemented_treatment">This treatment is not yet implemented</string>

    <!--        Menu settings  -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_login">My account</string>
    <string name="action_files">My files</string>
    <string name="action_qr_code">QR Code</string>

    <!--        Main Activity       -->
    <string name="presentation_message">This application allow you to record in real time your video, audio or photo directly on cloud </string>
    <string name="welcome_message">Welcome %s in Dictacloud</string>
    <string name="welcome_message_suite">please register</string>
    <string name="select_media_message">Select wich media and treatment you want to use</string>
    <string name="media_select_photo">Photo</string>
    <string name="media_select_video">Video</string>
    <string name="media_select_audio">Audio</string>
    <string name="select_traitement_mail">Send by mail</string>
    <string name="select_traitement_stockage">Store on server</string>
    <string name="select_traitement_cloud">Store in cloud</string>
    <string name="start_record">Start recording</string>

    <!--        Record Photo Activity       -->
    <string name="welcome_record_photo">Record Photos</string>
    <string name="welcome_record_photo2">Be carefull this function use data</string>
    <string name="button_take_photo">Take picture</string>
    <string name="photo_recorded">Your photo is recorded on the server</string>
    <string name="photo_error_result">Unexpected result</string>
    <string name="send_in_progress">Send in progress</string>
    <string name="quality_level">Quality level is %s</string>

    <!--        Settings activity   -->
    <string name="content_setting_server_label">Server name</string>
    <string name="content_setting_prompt_server">Name or @IP</string>
    <string name="content_setting_button_validation">Validation</string>
    <string name="content_setting_button_clear_pref">Clear Preferences</string>
    <string name="prompt_compress">Photo quality (%)</string>
    <string name="preferences_cleared">Preferences cleared</string>
    <string name="external_server">External access</string>
    <string name="internal_server">Internal Access</string>
    <string name="traitement_mail">Send by mail</string>
    <string name="traitement_stockage">Local storage</string>
    <string name="qr_code_message">Flash this QR Code to download this application</string>

    <!--        Send Audio Activity -->
    <string name="send_audio_title">Send Audio (in developpement, not operationnal)</string>
    <string name="send_audio_recording">Record in progress</string>
    <string name="media_select_alert_message">Select wich alert you want to use</string>
    <string name="media_select_alert_flash">Camera Flash</string>
    <string name="media_select_alert_led">Notification Led</string>
    <string name="media_select_alert_vibration">Vibration</string>
    <string name="media_select_alert_none">No alert</string>
    <string name="audio_recorded">Your audio file is recorded</string>


    <!--        file detail Activity -->
    <string name="file_detail_filename">filename</string>
    <string name="file_detail_button_remove">Remove</string>
    <string name="file_detail_button_send">Send</string>

    <!--        Activities      -->
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_recordphoto">Record Photo</string>
    <string name="title_activity_recordaudio">Record Audio</string>
    <string name="title_activity_files">My Files</string>
    <string name="title_activity_file_detail">File information</string>
    <string name="title_activity_send_video">Record Video</string>
    <string name="title_activity_qrcode_display">QRCode for download</string>

    <!-- Strings related to login -->
    <string name="prompt_pseudo">Pseudo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register">Register</string>
    <string name="action_unregister">Unregister</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_pseudo">This pseudo is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid (min 6 car, one maj, one ponct.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--    popup  -->
    <string name="popup_error_title">Error</string>
    <string name="popup_error_http_message">Bad http request : %s</string>
    <string name="popup_ok">OK</string>
    <string name="popup_cancel">Cancel</string>
    <string name="register_first">Register first</string>
    <string name="register_message">Register before recording</string>
    <string name="register_ok">Register OK</string>
    <string name="unsubscribe_ok">Unsubscribe OK</string>
    <string name="unregister_ok">Unregister OK</string>
    <string name="register_ko">Register KO : %s</string>

    <!--    String pas encore classées  -->

</resources>
