<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.orange.dictacloud.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <LinearLayout
        android:id="@+id/settings_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/Radiobt_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/RadioBt_server_external"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/external_server"/>

            <RadioButton
                android:id="@+id/RadioBt_server_internal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/internal_server"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/info_server"
        android:layout_below="@id/settings_server"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/content_setting_server_label"/>

        <TextView
            android:id="@+id/content_setting_server_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_setting_prompt_server"
            android:inputType="textUri"
            android:lines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_server"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_pseudo"/>

        <TextView
            android:id="@+id/content_setting_pseudo_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_pseudo"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"/>

        <TextView
            android:id="@+id/content_setting_email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_compression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_email"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_compress"/>

        <EditText
            android:id="@+id/content_setting_compress_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_compression"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:onClick="mBtClearPreferencesClickListener"
        android:text="@string/content_setting_button_clear_pref"/>
</RelativeLayout>
