<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.orange.dictacloud.RecordPhoto">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_record_photo"
        />

    <TextView
        android:id="@+id/welcome_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/welcome_message"
        android:gravity="center_horizontal"
        android:text="@string/welcome_record_photo2"
        />

    <Button
        android:id="@+id/button_take_picture"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_message2"
        android:layout_marginTop="25dp"
        android:onClick="recordPhoto"
        android:text="@string/button_take_photo"
        android:textStyle="bold"/>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_take_picture"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp">

        <FrameLayout
            android:id="@+id/camera_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </FrameLayout>

        <ImageButton
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:padding="20dp"/>

    </FrameLayout>


</RelativeLayout>
