<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.orange.dictacloud.FileDetailActivity"
    tools:showIn="@layout/activity_file_detail">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/file_detail_filename"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/file_detail_filename_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/file_detail_filename"/>

            <TextView
                android:id="@+id/file_detail_filename_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:text=""/>

            <ImageView
                android:id="@+id/file_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@id/file_detail_filename_title"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/file_detail_button_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/file_detail_image"
                android:layout_centerHorizontal="true"
                android:text="@string/file_detail_button_remove"/>

            <Button
                android:id="@+id/file_detail_button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/file_detail_button_remove"
                android:layout_centerHorizontal="true"
                android:text="@string/file_detail_button_send"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
